Opened 16 years ago

Closed 16 years ago

#2379 closed bug (fixed)

[Terminal]: crash on _ClearLines()

Reported by: emitrax Owned by: bonefish
Priority: high Milestone: R1
Component: Applications/Terminal Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I don't know how it is easy to reproduce, but it happened already twice tonight. While running an application of mine that continuously prints to the screen, I tried to open a new terminal (or a new tab, I don't really remember), and the terminal crashed. See picture for the stack trace.

Attachments (2)

terminal.jpg (85.3 KB ) - added by emitrax 16 years ago.
terminal2.jpg (91.6 KB ) - added by emitrax 16 years ago.

Download all attachments as: .zip

Change History (7)

by emitrax, 16 years ago

Attachment: terminal.jpg added

comment:1 by bonefish, 16 years ago

I haven't seen this one yet. It might have been fixed as a side effect of hrev25957. Please update, if you still encounter it or if you don't.

comment:2 by emitrax, 16 years ago

I just updated and managed to crash it again. It doesn't crash always, but the procedure I take is the same, open a new terminal (tab or window) while having an output on the terminal. This time I was unpacking vim and crashed on a different method.

Beside, but I'm not sure about this, after finishing unpacking the prompt is not displayed. Only the cursor.

by emitrax, 16 years ago

Attachment: terminal2.jpg added

comment:3 by bonefish, 16 years ago

I could rarely reproduce the problem. It should be fixed in hrev25958. Please verify.

If the prompt/cursor draw problem still exists, please open a new ticket for it.

comment:4 by emitrax, 16 years ago

I haven't been able to reproduce this problem after a first try. However a new behavior has come up.

If I open a new tab, while in the current one an application display continuously an output, and then switch back to the tab where the application is still running and producing output, the output is not displayed, it hangs. I have to scroll up and down to make it going again. This seems easy to reproduce over here, although you have to wait 2-3 seconds before switching back to the tab with application running. Shall I open a new bug for this one?

comment:5 by bonefish, 16 years ago

Resolution: fixed
Status: newclosed

Yes, in doubt please always open a new ticket for a different problem. I could easily reproduce it though and have already fixed it in hrev25965.

I'm closing this ticket If you encounter the problem it is about (the crash) again, please re-open it.

Note: See TracTickets for help on using tickets.