* Changed TerminalLine::length from int16 to uint16. * BasicTerminalBuffer::Init() no longer uses _ClearLines() to clear   the screen lines, since that expects the lines to be somewhat valid   at least and also needlessly updates the dirty region. * _ClearLines() always clears lines, even if they were empty. This way   the "softBreak" flag is cleared too. * Be a bit more careful when multiplying a potentially negative signed   number by an unsigned one. Shouldn't have caused a problem in this   case, though.

Either of the first three items should fix #2379.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25958 a95241bf-73f2-0310-859d-f6bbb57e9c96